--- a/src/components/analytics-control-bar-interval-filter/styles.module.scss
+++ b/src/components/analytics-control-bar-interval-filter/styles.module.scss
@@ -6,6 +6,5 @@
 }
 .analyticsIntervalLabel {
   color: $gray;
-  padding-left: 16px;
   padding-right: 16px;
 }
