--- a/src/components/analytics-control-bar/utilities.module.scss
+++ b/src/components/analytics-control-bar/utilities.module.scss
@@ -81,6 +81,7 @@
   padding: 0px;
   outline: none;
   cursor: pointer;
+  margin-right: 16px;
 }
 .addButton:focus { border-color: $brandPrimary; }
 
